Istio/planespotter-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: planespotter-gateway
  namespace: planespotter
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: planespotter-vs
  namespace: planespotter
spec:
  hosts:
  - "*"
  gateways:
    - planespotter-gateway.planespotter.svc.cluster.local
  http:
    route:
    - destination:
        host: planespotter-frontend.planespotter.svc.cluster.local
